--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js --config src/config/ormconfig.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.7.0",
@@ -24,10 +26,12 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.6.2",
+    "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "graphql": "^15.0.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
