--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "NODE_ENV=production node dist/index.js",
     "dev": "NODE_ENV=development ts-node-dev --poll src/index.ts",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js --config src/config/ormconfig.ts"
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js --config src/config/ormConfig.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
