--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/graphql-upload": "^8.0.10",
     "@types/jsonwebtoken": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
@@ -31,6 +32,7 @@
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "graphql": "^15.0.0",
+    "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
