--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -21,7 +21,8 @@
       { "argsIgnorePattern": "^_$" }
     ],
     "no-unused-vars": "off",
-    "max-classes-per-file": "off"
+    "max-classes-per-file": "off",
+    "prefer-promise-reject-errors": "off"
   },
   "settings": {
     "import/resolver": {
