feat(backend): add helper 'CloudStorage'
CloudStorage has the same purpose of the LocalStorage, however the CloudStorage uploads to the Cloudinary storage, and the LocalStorage uploads to the local storage

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,8 @@ DATABASE=ppw
 APP_PORT=4001
 
 JWT_SECRET=SuperSecureSecret
+
+CLOUDINARY_NAME=
+CLOUDINARY_KEY=
+CLOUDINARY_SECRET=
+CLOUDINARY_FOLDER=ppw
