--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "apollo-server-express": "^3.6.2",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.29.0",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "graphql": "^15.0.0",
